# precision-medicine-mcp

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  AUTOMATED_PATIENT_REPORTS.md  CLAUDE.md  FUNDING.md  GCP_TESTING_GUIDE.md  GITHUB_ISSUE_6_COMMENT.md  ISSUE_6_UPDATE.md  LICENSE  MULTIOMICS_INTEGRATION_SUMMARY.md  README.md  RISK_MITIGATION_WORKPLAN.md  SECURITY.md  deploy_to_gcp.sh  llms.txt  test_claude_api_integration.py  test_gcp_servers.sh
.agent/skills/: README.md
.github/workflows/: build-book-pdf.yml  quarto-book.yml  quarto-release.yml  release-book.yml
architecture/: README.md
architecture/multiomics/: README.md
architecture/patient-one/: README.md
architecture/spatial/: Claude_Code_Prompt_Spatial.md  README.md
architecture/spatial-transcriptomics/: CSV_WORKFLOW.md  Claude_Code_Prompt_Spatial.md  README.md
configs/: README.md  claude_desktop_config.json  claude_desktop_config_complete.json
dashboard/: README.md  cost_calculator.py  metrics_aggregator.py  requirements.txt  streamlit_app.py
dashboard/sample_data/: patientone_workflow.yaml
data/: README.md
data/quantum/: create_sample_spatial_data.py  quantum_embeddings_workflow_guide.md
desktop-configs/: CHANGELOG.md  README.md  claude_desktop_config.json  claude_desktop_config.template.json
docs/: AUTOMATED_PATIENT_REPORTS.md  CLAUDE_DESKTOP_QUICKSTART.md  CODE_QUALITY_REPORT.md  COMPLETE_POC_SUMMARY.md  COST_ANALYSIS.md  DISCLAIMERS.md  EXAMPLE_PROMPTS_GAP_ANALYSIS.md  EXECUTIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  INDEX.md  PHASE2_TESTING_GUIDE.md  PRODUCTION_ROADMAP.md  README.md  RISK_MITIGATION_SUMMARY.md  SERVER_IMPLEMENTATION_STATUS.md  SERVER_REGISTRY.md  WHY_MCP_FOR_HEALTHCARE.md  email-summary.md
docs/architecture/: README.md  clinical-spatial-bridge.md  error-handling.md  references.md  servers.md
docs/book/: .gitignore  (+43 more)
docs/mcp-server-boilerplate/: README.md  pyproject.toml
docs/mcp-server-boilerplate/src/mcp_template/: __init__.py  __main__.py  server.py
docs/mcp-server-boilerplate/tests/: test_server.py
infrastructure/: GET_STARTED.md  README.md  setup_environment.sh
manual_testing/: MANUAL_TESTING_GUIDE.md  README.md  setup_and_test_servers.sh  test_all_servers.py  verify_servers.sh
schemas/: citl_review_schema.json
scripts/: generate_patient_report.py
servers/: README.md
servers/mcp-cell-classify/: Dockerfile  README.md  deploy.sh  pyproject.toml
servers/mcp-cell-classify/src/mcp_cell_classify/: __init__.py  server.py
servers/mcp-deepcell/: .dockerignore  CLAUDE_DESKTOP_TESTING.md  DEPENDENCY_ISSUES.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  MONITORING.md  README.md  STREAMLIT_TESTING.md  TESTING.md  cloudbuild.yaml  deploy.sh  generate_synthetic_data.py  pyproject.toml  test_deployment.py
servers/mcp-deepcell/src/mcp_deepcell/: deepcell_engine.py  intensity_classifier.py  server.py
servers/mcp-deepcell/test_data/: README.md  dapi_1024x1024.tif  dapi_512x512.tif  ki67_1024x1024.tif  ki67_512x512.tif  manifest.json  membrane_1024x1024.tif  membrane_512x512.tif  tp53_1024x1024.tif  tp53_512x512.tif
servers/mcp-epic/: pyproject.toml
servers/mcp-epic/src/mcp_epic/: deidentify.py  epic_fhir_client.py  server.py
servers/mcp-genomic-results/: Dockerfile  README.md  pyproject.toml
servers/mcp-genomic-results/src/mcp_genomic_results/: __init__.py  __main__.py  annotations.py  server.py
servers/mcp-huggingface/: Dockerfile  pyproject.toml
servers/mcp-huggingface/src/mcp_huggingface/: __init__.py  server.py
servers/mcp-huggingface/tests/: test_server.py
servers/mcp-multiomics/: .env.example  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  pyproject.toml
servers/mcp-multiomics/src/mcp_multiomics/: __init__.py  __main__.py  config.py  server.py  validation.py
servers/mcp-multiomics/src/mcp_multiomics/tools/: halla.py  integration.py  stouffer.py  upstream_regulators.py  utils.py  visualization.py
servers/mcp-multiomics/tests/: conftest.py
servers/mcp-multiomics/tests/fixtures/: generate_fixtures.py
servers/mcp-openimagedata/: Dockerfile  README.md  pyproject.toml
servers/mcp-openimagedata/src/mcp_openimagedata/: server.py
servers/mcp-openimagedata/tests/: test_server.py
servers/mcp-patient-report/: Dockerfile  README.md  pyproject.toml
servers/mcp-patient-report/scripts/: citl_submit_review.py  generate_patient_report.py
servers/mcp-patient-report/src/mcp_patient_report/: __init__.py  __main__.py  server.py
servers/mcp-patient-report/src/mcp_patient_report/models/: __init__.py  patient_report.py
servers/mcp-patient-report/src/mcp_patient_report/report/: __init__.py  report_generator.py  report_pdf.py
servers/mcp-patient-report/src/mcp_patient_report/templates/: patient_report_full.html.j2
servers/mcp-patient-report/src/mcp_patient_report/templates/styles/: patient_report.css
servers/mcp-patient-report/tests/: __init__.py  test_models.py  test_report_generator.py
servers/mcp-patient-report/tests/fixtures/: pat001_report_data.json
servers/mcp-perturbation/: ARCHITECTURE.md  DEPLOYMENT_TESTING.md  Dockerfile  QUICK_START.md  README.md  TESTING_README.md  claude_desktop_config.json  pyproject.toml  test_deployment.sh  test_sse_deployment.sh
servers/mcp-perturbation/mcp_perturbation/: __main__.py  prediction.py
servers/mcp-perturbation/tests/: test_prediction.py
servers/mcp-seqera/: Dockerfile  pyproject.toml
servers/mcp-seqera/src/mcp_seqera/: __init__.py  __main__.py  server.py
servers/mcp-seqera/tests/: test_server.py
servers/mcp-spatialtools/: COMPLETE_WORKFLOW_TEST_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PHASE2D_PATHWAY_ENRICHMENT_SUMMARY.md  PHASE2E_SPATIAL_AUTOCORRELATION_SUMMARY.md  README.md  pyproject.toml  test_morans_i_direct.py
servers/mcp-spatialtools/src/mcp_spatialtools/: server.py
servers/mcp-spatialtools/tests/: test_server.py
servers/mcp-tcga/: Dockerfile  README.md  pyproject.toml
servers/mcp-tcga/src/mcp_tcga/: __init__.py  server.py
synthetic_data/: DATASET_MANIFEST.md  README.md  generate_data.py
tests/: README.md
ui/: README.md
(+604 files in other folders)
