[project]
name = "mcp-cell-classify"
version = "0.1.0"
description = "MCP server for cell phenotype classification from segmentation masks and marker images"
authors = [{name = "Precision Medicine MCP Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "google-cloud-storage>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/lynnlangit/precision-medicine-mcp"
Issues = "https://github.com/lynnlangit/precision-medicine-mcp/issues"
Documentation = "https://github.com/lynnlangit/precision-medicine-mcp/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
