[project]
name = "mcp-genomic-results"
version = "0.1.0"
description = "MCP server for parsing somatic variant (VCF) and copy number (CNS) results with clinical annotations"
authors = [{name = "Precision Medicine MCP Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lynnlangit/precision-medicine-mcp"
Issues = "https://github.com/lynnlangit/precision-medicine-mcp/issues"
Documentation = "https://github.com/lynnlangit/precision-medicine-mcp/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_genomic_results"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
