[project]
name = "mcp-huggingface"
version = "0.1.0"
description = "MCP server for ML models from Hugging Face"
authors = [{name = "Spatial MCP Team"}]
requires-python = ">=3.11"
dependencies = ["fastmcp>=0.2.0", "pydantic>=2.0.0", "httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "black>=24.0.0"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
