[project]
name = "mcp-patient-report"
version = "0.1.0"
description = "MCP server for generating patient-facing precision oncology reports"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "fhir.resources>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "textstat>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_patient_report"]
