[project]
name = "mcp-perturbation"
version = "0.2.0"
description = "MCP server for single-cell perturbation prediction using GEARS"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",
    "cell-gears>=0.1.0",
    "torch-geometric>=2.3.0",
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.11.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "GEOparse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-perturbation = "mcp_perturbation.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_perturbation*"]
